fix : make date picker nicer when text is too long

--- a/app/ui/Buttons/DateArrowButtonsCombo.module.css
+++ b/app/ui/Buttons/DateArrowButtonsCombo.module.css
@@ -7,4 +7,8 @@
 
 .dates {
   font-size: 12px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
